--- a/src/css/common.css
+++ b/src/css/common.css
@@ -18,6 +18,25 @@ img {
 }
 .timer{
   display: flex;
+  justify-content: center;
   flex-direction: row;
   gap: 10px;
 }
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+  width: 150px;
+  background-color: rgb(180, 255, 4);
+  border-radius: 50px;
+
+}
+.value{
+  font-size: 40px;
+}
+.label{
+  font-size: 20px;
+  font-weight: bold;
+}
+
